codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__feedback_view__tests__feedback_view_safety_check.snap
---
source: tui/src/bottom_pane/feedback_view.rs
expression: rendered
---
▌ 补 充 说 明 （ 安 全 拦 截 ）
▌
▌ (可 选 ) 请 说 明 被 拒 绝 的 内 容 ， 以 及 为 何 应 被 允 许

按  enter 确 认 ， 或 按  esc 返 回
